# LauncherPrestarter

./: .gitignore  Prestarter.sln  README.md  WindowsFormsApp1.sln  package.json
Prestarter/: Config.cs  I18n.cs  Prestarter.cs  Prestarter.csproj  PrestarterCore.cs  PrestarterForm.Designer.cs  PrestarterForm.cs  PrestarterForm.resx  Program.cs
Prestarter/Controls/: CircularButton.cs  CustomProgressBar.cs
Prestarter/Downloaders/: AdoptiumJavaDownloader.cs  BellsoftJavaDownloader.cs  CompositeDownloader.cs  IRuntimeDownloader.cs  OpenJFXDownloader.cs
Prestarter/Helpers/: ColorHelper.cs  DownloaderHelper.cs  Extensions.cs  HashProxyStream.cs  JsonParser.cs  SystemHelper.cs
Prestarter/L10n/: ILocale.cs  L10nManager.cs
Prestarter/L10n/Locales/: BeLocale.cs  ByLocale.cs  EnUsLocale.cs  EsLocale.cs  FrLocale.cs  (+7 more)
Prestarter/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Resources.ru-RU.resx  Settings.Designer.cs
Prestarter_module/: build.gradle  settings.gradle
WindowsFormsApp1/: AdoptiumJavaDownloader.cs  BellsoftJavaDownloader.cs  Config.cs  DownloadUtils.cs  Form1.Designer.cs  Form1.cs  Form1.resx  HttpClientExtensions.cs  IPartDownloader.cs  IStatusPeporter.cs  OpenJFXDownloader.cs  Prestarter.cs  Program.cs  StreamExtensions.cs  WindowsFormsApp1.csproj
WindowsFormsApp1/Properties/: AssemblyInfo.cs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  download.rs  extract.rs  lib.rs  main.rs  runner.rs
src/lib/: ProgressBar.svelte
src/routes/: +page.svelte
(+7 files in other folders)
